--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>To do List</title>
-</head>
-<body>
-
-    <h1>Hello World</h1>
-
+  </head>
+  <body>
+    <form action="/create" method="post">
+      <input
+        type="text"
+        name="task"
+        id="task"
+        placeholder="Insina uma tarefa"
+      />
+      <button id="addButton" type="submit">Adicionar</button>
+    </form>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
