--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,12 @@
       <button id="addButton" type="submit">Adicionar</button>
     </form>
 
+    <ul>
+      <% tasksList.forEach((task) => { %>
+      <li><%= task.task %> | <%= task.date.toLocaleDateString('pt-BR') %></li>
+      <% }) %>
+    </ul>
+
     <script src="script.js"></script>
   </body>
 </html>
