--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,21 +8,42 @@
     <title>To do List</title>
   </head>
   <body>
-    <form action="/create" method="post">
-      <input
-        type="text"
-        name="task"
-        id="task"
-        placeholder="Insina uma tarefa"
-      />
-      <button id="addButton" type="submit">Adicionar</button>
-    </form>
+    <header>
+      <% if (task == null) { %>
+      <form action="/create" method="post">
+        <input
+          type="text"
+          name="task"
+          id="task"
+          placeholder="Insina uma tarefa"
+        />
+        <button id="addButton" type="submit">Adicionar</button>
+      </form>
+      <% } else { %>
+      <form action="/updateOne/<%= task._id %>" method="post">
+        <input
+          type="text"
+          name="task"
+          id="task"
+          placeholder="Insina uma tarefa"
+          value="<%= task.task %>"
+        />
+        <button id="addButton" type="submit">Atualizar</button>
+      </form>
+      <% } %>
+    </header>
 
-    <ul>
-      <% tasksList.forEach((task) => { %>
-      <li><%= task.task %> | <%= task.date.toLocaleDateString('pt-BR') %></li>
-      <% }) %>
-    </ul>
+    <section id="tasks">
+      <ul>
+        <% tasksList.forEach((task) => { %>
+        <li>
+          <%= task.task %> | <%= task.date.toLocaleDateString('pt-BR') %>
+          <a href="/getById/<%= task._id %>">Editar</a>
+          <a href="">Deletar</a>
+        </li>
+        <% }) %>
+      </ul>
+    </section>
 
     <script src="script.js"></script>
   </body>
