--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,54 @@
-h1{
-    color: red;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font: "Montserrat", Arial;
+}
+
+body {
+    background-color: #f8f7f9;
+    width: 100%;
+    height: 100%;
+    color: #000;
+}
+
+header {
+    background-color: #858FFF;
+    padding: 3rem;
+    margin: .5rem;
+    text-align: center;
+}
+
+header h1 {
+    padding-bottom: 3rem;
+}
+
+form{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+input {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    width: 75%;
+    padding: .6rem;
+    font-size: 1rem;
+    outline: none;
+    background-color: #D1D5FF;
+}
+
+button {
+    padding: .6rem;
+    width: 25%;
+    background-color: #D1D5FF;
+    color: #000;
+    text-align: center;
+    font-size: 1.2rem;
+    outline: none;
+    cursor: pointer;
+    border-radius: 0;
+    border: none;
 }
