--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,22 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>To do List</title>
   </head>
   <body>
     <header>
       <% if (task == null) { %>
+        <h1>TO DO LIST</h1>
       <form action="/create" method="post">
         <input
           type="text"
           name="task"
           id="task"
           placeholder="Insina uma tarefa"
-        />
-        <button id="addButton" type="submit">Adicionar</button>
+        /><button id="addButton" type="submit">Adicionar</button>
       </form>
       <% } else { %>
+        <h1>EDITAR TAREFA</h1>
       <form action="/updateOne/<%= task._id %>" method="post">
         <input
           type="text"
@@ -28,7 +29,7 @@
           placeholder="Insina uma tarefa"
           value="<%= task.task %>"
         />
-        <button id="addButton" type="submit">Atualizar</button>
+        <button id="updateButton" type="submit">Atualizar</button>
       </form>
       <% } %>
     </header>
