--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>To do List</title>
   </head>
   <body>
     <header>
       <% if (task == null) { %>
-        <h1>TO DO LIST</h1>
+      <h1>TO DO LIST</h1>
       <form action="/create" method="post">
         <input
           type="text"
@@ -20,7 +24,7 @@
         /><button id="addButton" type="submit">Adicionar</button>
       </form>
       <% } else { %>
-        <h1>EDITAR TAREFA</h1>
+      <h1>EDITAR TAREFA</h1>
       <form action="/updateOne/<%= task._id %>" method="post">
         <input
           type="text"
@@ -38,9 +42,21 @@
       <ul>
         <% tasksList.forEach((task) => { %>
         <li>
-          <%= task.task %> | <%= task.date.toLocaleDateString('pt-BR') %>
-          <a href="/getById/<%= task._id %>/update">Editar</a>
-          <a href="/getById/<%= task._id %>/delete">Apagar</a>
+          <div>
+            <a href="">
+              <%= task.task %> 
+            </a>
+            <span>Criado em <%= task.date.toLocaleDateString('pt-BR') %></span>
+          </div>
+
+          <div>
+            <a class="btnUpdate" href="/getById/<%= task._id %>/update"
+              ><i class="material-icons">edit</i></a
+            >
+            <a class="btnDelete" href="/getById/<%= task._id %>/delete"
+              ><i class="material-icons">delete</i></a
+            >
+          </div>
         </li>
         <% }) %>
       </ul>
