--- a/public/style.css
+++ b/public/style.css
@@ -65,69 +65,176 @@ button:hover {
 }
 
 section#tasks {
-   margin: .5rem; 
+  margin: 0.5rem;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
 
 ul li {
-    position: relative;
-    padding: .5rem;
-    background-color: #858fff;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    font-size: 1.3rem;
+  position: relative;
+  padding: 0.5rem;
+  background-color: #858fff;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  font-size: 1.3rem;
 }
 
 ul li a {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
 
 ul li span {
-    color: #282B4D;
-    font-style: italic;
-    font-size: .8rem;
-    padding-left: 1rem;
+  color: #282b4d;
+  font-style: italic;
+  font-size: 0.8rem;
+  padding-left: 1rem;
 }
 
 ul li div {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
-ul li:nth-child(odd){
-    background-color: #d1d5ff;
+ul li:nth-child(odd) {
+  background-color: #d1d5ff;
 }
 
-ul li:hover{
-    background-color: #A7AACC;
+ul li:hover {
+  background-color: #a7aacc;
 }
 
 a.btnUpdate {
-    padding: .5rem;
-    text-decoration: none;
-    border-radius: 50%;
-    transition: all 0.3s ease-in-out;
+  padding: 0.5rem;
+  text-decoration: none;
+  border-radius: 50%;
+  transition: all 0.3s ease-in-out;
 }
 
-a.btnUpdate:hover{
-    background: #FFDF6B;
+a.btnUpdate:hover {
+  background: #ffdf6b;
 }
 
-a.btnDelete{
-    padding: .5rem;
-    text-decoration: none;
-    border-radius: 50%;
-    transition: all 0.3s ease-in-out;
+a.btnDelete {
+  padding: 0.5rem;
+  text-decoration: none;
+  border-radius: 50%;
+  transition: all 0.3s ease-in-out;
 }
 
-a.btnDelete:hover{
-    background: #FF9E9E;
+a.btnDelete:hover {
+  background: #ff9e9e;
+}
+
+section#modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #00000080;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: auto;
+}
+
+div#card {
+  width: 30rem;
+  position: relative;
+  background-color: #3f3f4d;
+}
+
+div#head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem;
+}
+
+div#card h2 {
+  margin: 0;
+  color: #fff;
+}
+
+div#card a#close {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.5rem;
+  transition: all 0.3s ease-in-out;
+}
+
+div#card a#close i {
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.3rem;
+}
+
+div#card a#close:hover {
+  border-radius: 48%;
+  background: #ff000d;
+  padding: 0 0.3rem;
+}
+
+div#card hr {
+  width: 90%;
+  margin: 0 auto;
+  border-color: #a7aacc;
+}
+
+div#card p {
+  padding: 1.5rem;
+  text-align: center;
+  font-size: 1.3rem;
+  line-height: 2rem;
+  color: #fff;
+}
+
+div#btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.5rem;
+}
+
+div#btns a {
+  text-decoration: none;
+  padding: 0.5rem;
+  width: 7rem;
+  text-align: center;
+  background-color: #3f3f4d;
+  font-size: 1.5rem;
+}
+
+
+div#btns a#btnNot{
+  color: #ff000d;
+  border: solid 1px #ff000d;
+  margin-right: 1rem;
+  transition: all 0.3s ease-in-out;
+}
+
+div#btns a#btnNot:hover{
+  background-color: #ff000d;
+  color: #fff;
+  border-radius: 50px;
+}
+
+div#btns a#btnYes{
+  color: #55ff00;
+  border: solid 1px #55ff00;
+  transition: all 0.3s ease-in-out;
+}
+
+div#btns a#btnYes:hover{
+  background-color: #55ff00;
+  color: #fff;
+  border-radius: 50px;
 }
