--- a/public/style.css
+++ b/public/style.css
@@ -238,3 +238,39 @@ div#btns a#btnYes:hover{
   color: #fff;
   border-radius: 50px;
 }
+
+.message {
+  padding: 1rem;
+  position: sticky;
+  top: 0;
+  z-index: 9999;
+  text-align: center;
+  font-size: 1.1rem;
+  font-weight: 600;
+  width: auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.message-danger{
+  background-color: #ff9e9e;
+  color: #ff000d;
+}
+
+.message-success{
+  background-color: #74b354;
+  color: #1c4209;
+}
+
+span#close-message{
+  font-size: 2rem;
+  cursor: pointer;
+  transition: .3s;
+  padding-left: 2rem;
+}
+
+span#close-message:hover{
+  color: #d16066;
+}
