--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,9 @@
 
     <header>
       <div id="about">
-        <!-- <div id="about-off">
+        <div id="about-off">
         <i class="material-icons">keyboard_arrow_down</i>
-      </div> -->
+      </div>
         <div id="about-active">
           <i class="material-icons aboutClose">keyboard_arrow_up</i>
           <h4 id="author">
