--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="/images/favicon16x16.ico" type="image/x-icon">
     <title>To do List</title>
   </head>
   <body>
